@@ -174,18 +174,12 @@
       </listitem>
     </orderedlist>
 
-    <para>Beginning with shorewall 4.4.20, the installer also supports a
-    <option>-p</option> (plain) option. Beginning with that release, the
-    standard configuration files (including samples) are annotated with the
-    contents of the associated manpage. The <option>-p</option> option
-    suppresses that behavior such that the configuration files do not include
-    documentation.</para>
-
-    <note>
-      <para>Setting the <emphasis role="bold">PLAIN</emphasis> environmental
-      variable to a non-empty value is equivalent to specifying
-      <option>-p</option>.</para>
-    </note>
+    <para>Beginning with shorewall 4.4.20.1, the installer also supports a
+    <option>-a</option> (annotated) option. Beginning with that release, the
+    standard configuration files (including samples) may be annotated with the
+    contents of the associated manpage. The <option>-a</option> option enables
+    that behavior. The default remains that the configuration files do not
+    include documentation.</para>
 
     <section>
       <title>Executables in /usr and Perl Modules</title>
