@@ -214,18 +214,17 @@
         </orderedlist>
       </important></para>
 
-    <para>If you are installing Shorewall version 3.4.0 or later then as each
-    file is introduced, I suggest that you look at the actual file on your
-    system and that you look at the <ulink
+    <para>As each file is introduced, I suggest that you look at the actual
+    file on your system and that you look at the <ulink
     url="configuration_file_basics.htm#Manpages">man page</ulink> for that
     file. For example, to look at the man page for the
     <filename>/etc/shorewall/zones</filename> file, type <command>man
     shorewall-zones</command> at a shell prompt.</para>
 
-    <para>If you are installing a Shorewall version earlier than 3.4.0, then
-    as each file is introduced, I suggest that you look through the actual
-    file on your system -- each file contains detailed configuration
-    instructions and default entries.</para>
+    <para>Note: Beginning with Shorewall 4.4.20.1, there are versions of the
+    sample files that are annotated with the corresponding manpage contents.
+    These files have names ending in '.annotated'. You might choose to look at
+    those files instead.</para>
 
     <para>Shorewall views the network where it is running as being composed of
     a set of zones. In the two-interface sample configuration, the following
