@@ -260,13 +260,13 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     message.
 
 10) The Shorewall and Shorewall6 configuration files (including the
-    samples) are now annotated with documentation from the associated
+    samples) may now be annotated with documentation from the associated
     manpage. 
 
-    The installers for these two packages support a -p (plain)
-    option that installs unannotated versions of the packages. Both
+    The installers for these two packages support a -a (annotated)
+    option that installs annotated versions of the packages. Both
     versions are available in the configfiles directory within the
-    tarball.
+    tarball and in the Sample directories.
 
 11) The STATE subcolumn of the secmarks file now allows the values 'I'
     which will match packets in the INVALID state, and 'NI'
