@@ -2,7 +2,10 @@ Changes in Shorewall 4.4.20.1
 
 1)  Corrected FSF address.
 
-2)  Don't modify configfiles/shorewall.conf & configfiles/shorewall6.conf.
+2)  Don't modify configfiles/shorewall.conf &
+    configfiles/shorewall6.conf.
+
+3)  Change 'plain' default.
 
 Changes in Shorewall 4.4.20 Final
 
